kubernetes/kustomize/system/ops-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ops
  namespace: internal-ingress
spec:
  gatewayClassName: gke-l7-rilb
  addresses:
    - type: NamedAddress
      value: ops-gateway
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.internal.devsecopsglobal.tech"
      tls:
        mode: Terminate
        certificateRefs:
          - name: internal-wildcard-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values: [argocd, vault]
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: internal-ingress
spec:
  parentRefs:
    - name: ops
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
