kubernetes/kustomize/system/ops-gateway/grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: ops
      namespace: internal-ingress
      sectionName: https
  hostnames:
    - grafana.internal.devsecopsglobal.tech
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
