kubernetes/kustomize/system/ops-gateway/prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: ops
      namespace: internal-ingress
      sectionName: https
  hostnames:
    - prometheus.internal.devsecopsglobal.tech
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
